--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  background-color: #0c0d0e;
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
   font-weight: 400;
-
+  overflow: hidden;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,8 +25,9 @@ a:hover {
 }
 
 body {
+  background-color: #0c0d0e;
   margin: 0;
-  display: flex;
+  /*display: flex;*/
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -37,9 +39,10 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
+  width: unset !important;
+  /*max-width: 1280px;*/
   margin: 0 auto;
-  padding: 2rem;
+  /*padding: 2rem;*/
   text-align: center;
 }
 
@@ -47,7 +50,6 @@ h1 {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
-  transition: filter 300ms;
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
@@ -74,6 +76,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  box-shadow: 0 0 1px #999;
 }
 button:hover {
   border-color: #646cff;
@@ -94,4 +97,21 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+#chart-container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+body {
+  overflow: hidden;
+}
+
+.button-group {
+  position: absolute;
+  z-index: 1;
+  bottom: 50px;
+  width: 100%;
 }
